force-app/main/default/objects/CPQ2_VMI_Request__c/CPQ2_VMI_Request__c.object-meta.xml
<CustomObject>
    <label>VMI Request</label>
    <nameField>
        <displayFormat>VMIR-{000000000}</displayFormat>
        <label>VMI Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VMI Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>