force-app/main/default/objects/CPQ2_VMI_Request__c/fields/CPQ2_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>VMI Requests</relationshipLabel>
    <relationshipName>CPQ2_VMI_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>