force-app/main/default/objects/CPQ2_VMI_Request__c/fields/CPQ2_Par_Level__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Par_Level__c</fullName>
    <label>Par Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>