force-app/main/default/objects/CPQ2_VMI_Request__c/fields/CPQ2_Product__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VMI Requests</relationshipLabel>
    <relationshipName>VMI_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>